<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:whilu="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/AppTheme"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.bacter.antimosquito.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:textColor="@color/color_attention_text"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="378dp"
        android:layout_height="328dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="196dp"
        android:layout_marginBottom="116dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        tools:ignore="UselessLeaf">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="vertical"
            android:padding="5dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="3dp"
                android:paddingRight="3dp">
                <com.github.whilu.library.CustomButton
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:onClick="play1"
                    android:padding="3dp"
                    android:text="@string/_08khz"
                    android:textSize="17sp"
                    whilu:pressed_color="@color/colorAccent"
                    whilu:shape_type="rectangle"
                    whilu:unpressed_color="@color/transparent" />
                <com.github.whilu.library.CustomButton
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:gravity="center"
                    android:onClick="play2"
                    android:padding="3dp"
                    android:text="@string/_10khz"
                    android:textSize="17sp"
                    whilu:pressed_color="@color/colorAccent"
                    whilu:shape_type="rectangle"
                    whilu:unpressed_color="@color/transparent" />
                <com.github.whilu.library.CustomButton
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:gravity="center"
                    android:onClick="play3"
                    android:padding="3dp"
                    android:text="@string/_12khz"
                    android:textSize="17sp"
                    whilu:pressed_color="@color/colorAccent"
                    whilu:shape_type="rectangle"
                    whilu:unpressed_color="@color/transparent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="3dp"
                android:paddingRight="3dp">
                <com.github.whilu.library.CustomButton
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:onClick="play4"
                    android:padding="3dp"
                    android:text="@string/_14khz"
                    android:textSize="17sp"
                    whilu:pressed_color="@color/colorAccent"
                    whilu:shape_type="rectangle"
                    whilu:unpressed_color="@color/transparent" />
                <com.github.whilu.library.CustomButton
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:gravity="center"
                    android:onClick="play5"
                    android:padding="3dp"
                    android:text="@string/_16khz"
                    android:textSize="17sp"
                    whilu:pressed_color="@color/colorAccent"
                    whilu:shape_type="rectangle"
                    whilu:unpressed_color="@color/transparent" />
                <com.github.whilu.library.CustomButton
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:gravity="center"
                    android:onClick="play6"
                    android:padding="3dp"
                    android:text="@string/_17khz"
                    android:textSize="17sp"
                    whilu:pressed_color="@color/colorAccent"
                    whilu:shape_type="rectangle"
                    whilu:unpressed_color="@color/transparent" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="3dp"
                android:paddingRight="3dp">
                <com.github.whilu.library.CustomButton
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:onClick="play7"
                    android:padding="3dp"
                    android:text="@string/_21khz"
                    android:textSize="17sp"
                    whilu:pressed_color="@color/colorAccent"
                    whilu:shape_type="rectangle"
                    whilu:unpressed_color="@color/transparent" />
                <com.github.whilu.library.CustomButton
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:gravity="center"
                    android:onClick="play8"
                    android:padding="3dp"
                    android:text="@string/_22khz"
                    android:textSize="17sp"
                    whilu:pressed_color="@color/colorAccent"
                    whilu:shape_type="rectangle"
                    whilu:unpressed_color="@color/transparent" />
                <com.github.whilu.library.CustomButton
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:gravity="center"
                    android:onClick="play9"
                    android:padding="3dp"
                    android:text="@string/_24khz"
                    android:textSize="17sp"
                    whilu:pressed_color="@color/colorAccent"
                    whilu:shape_type="rectangle"
                    whilu:unpressed_color="@color/transparent" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">
                <com.github.whilu.library.CustomButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:gravity="center"
                    android:onClick="onStop"
                    android:padding="3dp"
                    android:text="@string/stop"
                    android:textSize="17sp"
                    whilu:pressed_color="@color/colorAccent"
                    whilu:shape_type="rectangle"
                    whilu:unpressed_color="@color/transparent" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_attention_text"
            android:gravity="center"
            android:text="@string/dev"
            android:textSize="14sp"
            android:textStyle="bold|italic" />
    </LinearLayout>
</RelativeLayout>